mool/tests/compile/fail/sql_enum_int_missing_code.stderr
error: storage = "int" requires every variant to define code
 --> tests/compile/fail/sql_enum_int_missing_code.rs:8:5
  |
8 |     Published,
  |     ^^^^^^^^^
